Update README.md for v0.1